samples/_failures_safe/1761617811_81ef98_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3252b90.c: In function ‘main’:
./samples/SAFE/__tmp_c3252b90.c:169:9: error: expected declaration or statement at end of input
  169 |         input[len - 1] = '\0';
      |         ^~~~~
./samples/SAFE/__tmp_c3252b90.c:169:9: error: expected declaration or statement at end of input
